deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 3dhoudini-server-deployment
  labels:
    app: 3dhoudini-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 3dhoudini-server
  template:
    metadata:
      labels:
        app: 3dhoudini-server
    spec:
      containers:
        - name: 3dhoudini-server
          image: 664848377136.dkr.ecr.ap-south-1.amazonaws.com/3dhoudini-server:commit-number
          imagePullPolicy: Always
          ports:
            - containerPort: 80
